style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
  font-size: 26px;
}

h2 {
  font-size: 30px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
  
}

h3 {
  font-size: 28px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
  font-size: 24px;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}



/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav {
  display: flex;
  justify-content: center;
  flex-direction: row;

}

header nav ul {
  display: flex;
  flex-direction: row;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}


/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
  padding: 10px;
  font-size: 18px;
  text-align: center;
}

form label {
  font-weight: bold;
  padding-right: 10px;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
@media all and (min-width: 810px) {
  h1 {
    font-size:28px;
  }
  p {
    font-size: 18px;
  }
  main img {
    width: 100%;
    height: auto;
    object-fit: cover;
    
  }
  /* Nav & Title */
  header {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    font-size: 24px;
  }
  header nav ul {
    margin-top: 40px;
  }
  header nav ul li {
    font-size: 20px;
  }
  /* Form */
  form {
    display: flex;
    flex-direction: row;
    flex: 1;
    justify-content: space-between;
    font-size: 18px;
    
  }
  /* About*/
  #about {
    font-size: 12px;
  }

  #about div {
    display: flex;
    justify-content: space-between;
  }
  #about img {
    max-width: 30%;
    height: auto;
    justify-content: space-between;
    padding: 10px;
  }
  #about h2 {
    text-align: center;
  }
/* Ideas */
  .grid-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 20px;
    text-align: center;
  }
  
  .grid-container > div {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .grid-container img {
    width: 100%;
    max-width: 700px;
    height: auto;
  }
  
  .grid-container h3 {
    margin-top: 0;
    margin-bottom: 10px;
  }
/* Host*/
  #host {
    font-size: 14px;
    display: flex;
    flex-direction: row;
  }
  #host img {
    max-width: 50%;
    display: flex;
    flex-direction: row;
  }
}

